--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <header id="header" class="sticky top-0 left-0 right-0 z-50 bg-black">
     <div class="container flex items-center justify-between px-6 py-4 mx-auto">
         <a href="#" class="flex items-center">
-            <img src="stackit-logo-white.webp" alt="Stackit Logo" class="w-auto h-7 sm:h-9" />
+            <img src="stackit-logo.png" alt="Stackit Logo" class="w-auto h-7 sm:h-9" />
         </a>
         <div class="flex items-center space-x-6">
             <a href="#contact" class="bg-[#3F5FDD] hover:bg-[#3550B8] text-white font-semibold px-3 py-2 sm:px-6 sm:py-3 text-sm sm:text-base transition-colors duration-300 rounded-lg">Introduction Call</a>
@@ -230,7 +230,7 @@
         </div>
     </section>
 
-    <section id="partner-section" class="py-20 md:py-32" style="background: linear-gradient(to bottom, #000000, #0a1a6260, #000000);">
+    <section id="partner-section" class="py-20 md:py-32" style="background: linear-gradient(to bottom, #000000, #0A1A3E60, #000000);">
         <div class="container px-6 mx-auto text-center">
             <div class="max-w-4xl mx-auto fade-in-section">
                 <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-8">The Partner You've Been Searching For...</h2>
