In the form "Send" Button change to "Send Message"

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         </div>
                     </div>
                     <div class="mt-8">
-                        <button type="submit" class="w-full text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl bg-gray-800 hover:bg-gray-900 transition-colors duration-300 inline-block rounded-2xl">Send</button>
+                        <button type="submit" class="w-full text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm:text-xl bg-gray-800 hover:bg-gray-900 transition-colors duration-300 inline-block rounded-2xl">Send Message</button>
                     </div>
                 </form>
             </div>
