--- a/index.html
+++ b/index.html
@@ -291,15 +291,24 @@
             </button>
         </div>
         <div class="flex-grow grid grid-cols-1 md:grid-cols-2">
-            <div class="bg-gray-50 p-8 md:p-12 flex flex-col justify-center">
-                <h3 class="text-3xl font-bold text-gray-900 mb-6">What happens next?</h3>
-                <div class="space-y-6">
-                    <div>
-                        <h4 class="text-xl font-bold text-gray-800" id="contact">1. Introduction Call</h4>
-                        <p class="text-lg text-gray-600 mt-2">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
+            <div class="hidden md:flex bg-gray-50 p-8 md:p-12 flex-col justify-center">
+                <div>
+                    <h3 class="text-3xl font-bold text-gray-900 mb-6">What happens next?</h3>
+                    <div class="space-y-6">
+                        <div>
+                            <h4 class="text-xl font-bold text-gray-800" id="contact">1. Introduction Call</h4>
+                            <p class="text-lg text-gray-600 mt-2">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
+                        </div>
+                        <div class="pt-4 border-t border-gray-200">
+                            <p class="text-sm text-gray-500">A member of our team will reach out within one business day to schedule your call.</p>
+                        </div>
                     </div>
-                    <div class="pt-4 border-t border-gray-200">
-                        <p class="text-sm text-gray-500">A member of our team will reach out within one business day to schedule your call.</p>
+                    <div class="mt-12 pt-8">
+                        <div class="flex items-center justify-around gap-x-8">
+                            <img src="siemens-logo.png" alt="Siemens Logo" class="h-6 w-auto object-contain filter grayscale opacity-60" />
+                            <img src="i2sl-logo.png" alt="I2SL Logo" class="h-6 w-auto object-contain filter grayscale opacity-60" />
+                            <img src="aircuity_logo.png" alt="Aircuity Logo" class="h-6 w-auto object-contain filter grayscale opacity-60" />
+                        </div>
                     </div>
                 </div>
             </div>
