--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                             <p class="text-lg text-gray-600 mt-2">We hold a structured, two-way conversation to understand your vision, challenges, and goals. We'll provide a transparent overview of our process, ensuring we both have a confident decision on our fit as partners.</p>
                         </div>
                         <div class="pt-4 border-t border-gray-200">
-                            <p class="text-sm text-gray-500">A member of our team will reach out within one business day to schedule your call.</p>
+                            <p class="text-sm text-gray-500">A member of our team will reach out to schedule your call.</p>
                         </div>
                     </div>
                     <div class="mt-12 pt-8">
