--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
             <div class="md:col-span-7">
                 <a href="#" class="inline-block mb-6">
-                    <img src="stackit-logo-white-white.webp" alt="Stackit Logo" class="h-6 w-auto" />
+                    <img src="stackit-logo-white.png" alt="Stackit Logo" class="h-6 w-auto" />
                 </a>
                 <div class="text-gray-300 text-lg mb-12">
                     <p>Stackit is a software development agency. With a specialty in business systems, SaaS, and critical application design, we're the preferred partner for companies that want to build extraordinary software with a team that shares their standards. We provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.</p>
