--- a/index.html
+++ b/index.html
@@ -251,17 +251,17 @@
         <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
             <div class="md:col-span-7">
                 <a href="#" class="inline-block mb-6">
-                    <img src="stackit-logo-white.png" alt="Stackit Logo" class="h-6 w-auto" />
+                    <img src="stackit-logo-white-white.webp" alt="Stackit Logo" class="h-6 w-auto" />
                 </a>
                 <div class="text-gray-300 text-lg mb-12">
                     <p>Stackit is a software development agency. With a specialty in business systems, SaaS, and critical application design, we're the preferred partner for companies that want to build extraordinary software with a team that shares their standards. We provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.</p>
                     <p class="mt-4 font-semibold text-gray-300">San Diego, CA</p>
                 </div>
-                <h2 class="text-2xl font-bold text-white mb-4">Insights for your inbox</h2>
-                <form class="flex">
-                    <input type="email" placeholder="Enter your email" class="w-full px-4 py-3 bg-gray-900 text-white border border-gray-700 rounded-l-lg focus:outline-none focus:ring-2 focus:ring-[#3F5FDD]" required />
-                    <button type="submit" aria-label="Subscribe to newsletter" class="bg-[#3F5FDD] text-white font-semibold px-6 py-3 rounded-r-lg hover:bg-[#3550B8] transition-colors">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path></svg>
+                <h2 class="text-2xl font-bold text-white mb-4">Stay in the loop</h2>
+                <form class="relative max-w-md">
+                    <input type="email" placeholder="Enter your email" class="w-full px-6 py-4 bg-gray-900 text-white border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#3F5FDD] pr-28" required />
+                    <button type="submit" class="absolute inset-y-0 right-0 flex items-center pr-6 text-white font-semibold hover:text-gray-300 transition-colors">
+                        Subscribe
                     </button>
                 </form>
             </div>
