--- a/index.html
+++ b/index.html
@@ -251,19 +251,22 @@
         <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
             <div class="md:col-span-7">
                 <a href="#" class="inline-block mb-6">
-                    <img src="stackit-logo-white-white.webp" alt="Stackit Logo" class="h-6 w-auto" />
+                    <img src="stackit-logo-white.png" alt="Stackit Logo" class="h-6 w-auto" />
                 </a>
                 <div class="text-gray-300 text-lg mb-12">
                     <p>Stackit is a software development agency. With a specialty in business systems, SaaS, and critical application design, we're the preferred partner for companies that want to build extraordinary software with a team that shares their standards. We provide a true software development partnership, built on a culture of deep collaboration and rigorous engineering discipline. We give you the confidence of a great in-house team, freeing you to innovate at speed.</p>
                     <p class="mt-4 font-semibold text-gray-300">San Diego, CA</p>
                 </div>
                 <h2 class="text-2xl font-bold text-white mb-4">Stay in the loop</h2>
-                <form class="relative max-w-md">
-                    <input type="email" placeholder="Enter your email" class="w-full px-6 py-4 bg-gray-900 text-white border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#3F5FDD] pr-28" required />
-                    <button type="submit" class="absolute inset-y-0 right-0 flex items-center pr-6 text-white font-semibold hover:text-gray-300 transition-colors">
-                        Subscribe
-                    </button>
-                </form>
+                <div class="max-w-md">
+                    <form class="relative" id="newsletter-form">
+                        <input id="newsletter-email" type="email" placeholder="Enter your email" class="w-full px-1 py-4 bg-transparent text-white border-0 border-b-2 border-gray-700 focus:outline-none focus:ring-0 focus:border-[#3F5FDD] pr-28 transition-colors rounded-none" required />
+                        <button id="newsletter-button" type="submit" class="absolute inset-y-0 right-0 flex items-center px-6 text-white font-semibold hover:text-gray-300 transition-colors">
+                            <span>Subscribe</span>
+                        </button>
+                    </form>
+                    <p id="newsletter-success" class="text-gray-400 mt-2 text-sm hidden">Welcome to Stackit!</p>
+                </div>
             </div>
             <div class="md:col-span-3 flex flex-col items-start">
                 <div class="text-left w-full">
@@ -417,6 +420,28 @@
 
             // Close the panel after a delay
             setTimeout(() => closePanel(true), 2500);
+        });
+
+        // Newsletter form submission
+        const newsletterForm = document.getElementById('newsletter-form');
+        const newsletterEmail = document.getElementById('newsletter-email');
+        const newsletterButton = document.getElementById('newsletter-button');
+        const newsletterSuccess = document.getElementById('newsletter-success');
+
+        newsletterForm.addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            // Change button to checkmark
+            newsletterButton.innerHTML = `
+                <svg class="w-6 h-6 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+            `;
+
+            // Disable form elements
+            newsletterEmail.disabled = true;
+            newsletterButton.disabled = true;
+
+            // Show success message
+            newsletterSuccess.classList.remove('hidden');
         });
     });
 </script>
