--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="py-20 md:py-32 bg-black">
         <div class="container mx-auto px-6">
             <div class="text-center max-w-4xl mx-auto mb-16 fade-in-section">
-                <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="text-white underline">We deliver that experience</span></h2>
+                <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white leading-tight">Your external team should feel like a top in-house team. <span class="gradient-text">We deliver that experience</span></h2>
             </div>
             <div class="grid md:grid-cols-3 gap-x-8 gap-y-12 max-w-6xl mx-auto text-center">
                 <div class="fade-in-section">
@@ -272,9 +272,18 @@
                 <div class="text-left w-full">
                     <h2 class="text-2xl font-bold text-white mb-6">Get In Touch</h2>
                     <div class="space-y-4 text-lg text-gray-300">
-                        <p><a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a></p>
-                        <p><a href="tel:+16199175387" class="hover:text-white transition-colors">+1 (619) 917-5387</a></p>
-                        <p><a href="https://www.linkedin.com/company/stackit/" target="_blank" rel="noopener noreferrer" class="font-semibold text-white hover:underline">LinkedIn</a></p>
+                        <p class="flex items-center">
+                            <svg class="w-5 h-5 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                            <a href="mailto:hello@stackitgroup.com" class="hover:text-white transition-colors">hello@stackitgroup.com</a>
+                        </p>
+                        <p class="flex items-center">
+                            <svg class="w-5 h-5 mr-3 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path></svg>
+                            <a href="tel:+16199175387" class="hover:text-white transition-colors">+1 (619) 917-5387</a>
+                        </p>
+                        <p class="flex items-center">
+                            <svg class="w-5 h-5 mr-3 text-gray-400" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
+                            <a href="https://www.linkedin.com/company/stackit/" target="_blank" rel="noopener noreferrer" class="font-semibold text-white hover:underline">LinkedIn</a>
+                        </p>
                     </div>
                 </div>
                 <div class="mt-12 flex flex-col w-auto text-4xl font-semibold text-white">
