--- a/closure.html
+++ b/closure.html
@@ -28,30 +28,30 @@
         }
     </style>
 </head>
-<body class="bg-black text-gray-200 antialiased">
+<body class="bg-gray-50 text-gray-800 antialiased">
 
 <a href="index.html" class="fixed top-6 left-6 z-50">
-    <img src="stackit-logo.png" alt="Stackit Logo" class="w-auto h-5 sm:h-6" />
+    <img src="stackit-logo-black.png" alt="Stackit Logo" class="w-auto h-5 sm:h-6" />
 </a>
 
 <main>
-    <section class="pt-20 pb-20 md:pt-32 md:pb-32 bg-black relative">
+    <section class="pt-20 pb-20 md:pt-32 md:pb-32 bg-gray-50 relative">
         <!-- Top right close button -->
-        <a href="index.html#partner-section" class="fixed top-6 right-6 text-gray-400 hover:text-white transition-colors z-50">
+        <a href="index.html#partner-section" class="fixed top-6 right-6 text-gray-500 hover:text-black transition-colors z-50">
             <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
         </a>
         <div class="container mx-auto px-6">
-            <div class="max-w-4xl mx-auto text-gray-300 space-y-8">
-                <h1 class="text-4xl md:text-5xl font-bold text-white leading-tight mb-12 fade-in-section">The Partner You've Been Searching For...</h1>
-                <p class="text-lg md:text-xl text-gray-200 fade-in-section">The search for a capable dev partner shouldn't end in frustration and chaos. We've designed a clear path for leaders who are ready to stop micromanaging and start building the extraordinary software their vision demands.</p>
+            <div class="max-w-4xl mx-auto text-gray-700 space-y-8">
+                <h1 class="text-4xl md:text-5xl font-bold text-black leading-tight mb-12 fade-in-section">The Partner You've Been Searching For...</h1>
+                <p class="text-lg md:text-xl text-gray-800 fade-in-section">The search for a capable dev partner shouldn't end in frustration and chaos. We've designed a clear path for leaders who are ready to stop micromanaging and start building the extraordinary software their vision demands.</p>
                 <p class="text-lg fade-in-section">At Stackit, we know you’re the kind of leader committed to transforming a great idea into an extraordinary software product. To do that, you need a highly professional, specialized team that acts as a true partner in bringing your vision to life.</p>
                 <p class="text-lg fade-in-section">But there’s a problem: finding a capable dev partner is harder than it should be. Choosing the wrong one too often leads to Development Chaos. Instead of leading, you’re left managing misaligned teams, frustrated by a search that wastes time and drains energy. We believe businesses shouldn’t have to struggle when they want to build an exceptional product with external help.</p>
                 <p class="text-lg fade-in-section">We understand the frustration you feel when new growth opportunities are strained by a lack of quality and the stress of having to micromanage instead of lead. We genuinely share your concern about wasting precious time and money, especially when finding the right partner feels like such a high-stakes challenge. That’s why we built our company to operate with the drive of an in-house team, combining rigorous engineering discipline with the obsessive collaboration of a true partner.</p>
                 <p class="text-lg fade-in-section">Our path forward is designed to be clear and straightforward. It begins with an introduction call to understand your vision and strategic goals. From there, we present a tailored game plan that provides a comprehensive roadmap for success. Once you approve, our team integrates seamlessly with yours, allowing you to build with confidence as you watch your vision manifest in a steady, predictable rhythm of progress.</p>
                 <div class="pt-8">
-                    <p class="text-lg text-white font-semibold">So, schedule an introduction call today. You can stop being drained by constant team oversight and start building the extraordinary software your vision demands.</p>
+                    <p class="text-lg text-black font-semibold">So, schedule an introduction call today. You can stop being drained by constant team oversight and start building the extraordinary software your vision demands.</p>
                     <div class="mt-8 flex flex-col sm:flex-row items-center justify-between gap-6">
-                        <a href="index.html#partner-section" class="text-lg font-semibold text-gray-300 hover:text-white transition-colors duration-300 group">
+                        <a href="index.html#partner-section" class="text-lg font-semibold text-gray-600 hover:text-black transition-colors duration-300 group">
                             <span class="inline-block transition-transform duration-300 group-hover:-translate-x-2">&larr;</span> Back to Home
                         </a>
                         <a href="#contact" class="whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg">Introduction Call</a>
