fix: updated contact form button

--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
               <div class="mt-8">
                 <button
                   type="submit"
-                  class="w-full text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm-text-xl bg-gray-800 hover:bg-gray-900 transition-colors duration-300 inline-block rounded-2xl"
+                  class="w-full text-white font-semibold px-10 py-4 text-lg sm:px-20 sm:py-5 sm-text-xl bg-black hover:opacity-90 ease-in-out duration-300 inline-block rounded-lg"
                 >
                   Send Message
                 </button>
