fix: removed index from heading contact form

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
               <div class="space-y-6">
                 <div>
                   <h4 class="text-xl font-bold text-gray-800" id="contact">
-                    1. Introduction Call
+                    Introduction Call
                   </h4>
                   <p class="text-lg text-gray-600 mt-2">
                     We hold a structured, two-way conversation to understand
