--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
                   id="newsletter-email"
                   type="email"
                   placeholder="Enter your email"
+                  autocomplete="off"
                   class="w-full px-1 py-4 bg-transparent text-white border-0 border-b-2 border-gray-700 focus:outline-none focus:ring-0 focus:border-[#3F5FDD] pr-28 transition-colors rounded-none"
                   required
                 />
@@ -640,9 +641,7 @@
                       d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
                     ></path>
                   </svg>
-                  <a
-                    href="tel:+16199175387"
-                    class="hover:text-white transition-colors"
+                  <a href="tel:+16199175387" class="hover:cursor-default"
                     >+1 (619) 917-5387</a
                   >
                 </p>
@@ -927,7 +926,7 @@
 
           // Change button to checkmark
           newsletterButton.innerHTML = `
-                <svg class="w-6 h-6 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                <svg class="w-6 h-6 text-[#99C4FE]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
             `;
 
           // Disable form elements
