--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Stackit - Your External Dev Team with In-House Drive</title>
     <!-- Add this line for your favicon -->
-    <link rel="icon" href="stackit-favicon.png" type="image/png" />
+    <link rel="icon" href="stackit-favicon.ico" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -56,9 +56,9 @@
       >
         <a href="#" class="flex items-center">
           <img
-            src="stackit-logo.png"
+            src="stackit_logo_white.png"
             alt="Stackit Logo"
-            class="w-auto h-7 sm:h-9"
+            class="w-auto h-10 sm:h-10"
           />
         </a>
         <div class="flex items-center space-x-6">
@@ -331,7 +331,7 @@
               </div>
             </div>
             <div class="lg:col-span-2">
-              <div class="space-y-12">
+              <div>
                 <div class="flex fade-in-section">
                   <div class="flex flex-col items-center mr-6">
                     <div
@@ -345,7 +345,7 @@
                     <h3 class="mb-2 text-2xl font-bold text-white">
                       Introduction Call
                     </h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       A conversation to explore your vision and our process
                     </p>
                     <p class="text-gray-300">
@@ -369,7 +369,7 @@
                     <h3 class="mb-2 text-2xl font-bold text-white">
                       Clarify the Why
                     </h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       Uncovering Your Purpose
                     </p>
                     <p class="text-gray-300">
@@ -391,7 +391,7 @@
                   </div>
                   <div class="pt-1 pb-12">
                     <h3 class="mb-2 text-2xl font-bold text-white">Proposal</h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       Creating the game plan for the winning team
                     </p>
                     <p class="text-gray-300">
@@ -415,7 +415,7 @@
                     <h3 class="mb-2 text-2xl font-bold text-white">
                       Build Mode: ON
                     </h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       Building with Confidence, From Day One
                     </p>
                     <p class="text-gray-300">
@@ -437,7 +437,7 @@
                   </div>
                   <div class="pt-1 pb-12">
                     <h3 class="mb-2 text-2xl font-bold text-white">Pulse</h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       See your vision manifest – two weeks at a time
                     </p>
                     <p class="text-gray-300">
@@ -462,7 +462,7 @@
                     <h3 class="mb-2 text-2xl font-bold text-white">
                       The Quality Gate
                     </h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       Your Green Light for a Confident Launch
                     </p>
                     <p class="text-gray-300">
@@ -485,7 +485,7 @@
                     <h3 class="mb-2 text-2xl font-bold text-white">
                       Beyond Launch
                     </h3>
-                    <p class="mb-4 text-lg font-medium text-gray-400">
+                    <p class="mb-4 text-lg font-medium text-gray-400 italic">
                       Your Partner in Continuous Growth and Evolution
                     </p>
                     <p class="text-gray-300">
@@ -525,7 +525,7 @@
             >
               The Partner You've Been Searching For...
             </h2>
-            <p class="mb-12 text-[30px] text-gray-300">
+            <p class="mb-12 text-2xl text-gray-300">
               The search for a capable dev partner shouldn't end in frustration
               and chaos. We've designed a clear path for leaders who are ready
               to stop micromanaging and start building the extraordinary
@@ -550,18 +550,18 @@
       </section>
     </main>
 
-    <footer class="bg-black text-gray-300 min-h-screen flex items-center">
-      <div class="container mx-auto px-6 py-24">
-        <div class="grid grid-cols-1 md:grid-cols-10 gap-16">
+    <footer class="bg-black text-gray-300 py-20 md:py-24">
+      <div class="container mx-auto px-6">
+        <div class="grid grid-cols-1 md:grid-cols-10 gap-y-12 md:gap-x-16">
           <div class="md:col-span-7">
             <a href="#" class="inline-block mb-6">
               <img
-                src="stackit-logo-white.png"
+                src="stackit_logo_solid_white.png"
                 alt="Stackit Logo"
                 class="h-6 w-auto"
               />
             </a>
-            <div class="text-gray-300 text-lg mb-12">
+            <div class="text-gray-300 text-md">
               <p>
                 Stackit is a software development agency. With a specialty in
                 business systems, SaaS, and critical application design, we're
@@ -574,8 +574,76 @@
               </p>
               <p class="mt-4 font-semibold text-gray-300">San Diego, CA</p>
             </div>
+          </div>
+
+          <div class="md:col-span-3">
+            <h2 class="text-2xl font-bold text-white mb-6">Get In Touch</h2>
+            <div class="space-y-4 text-lg text-gray-300">
+              <p class="flex items-center">
+                <svg
+                  class="w-5 h-5 mr-3 text-gray-400"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  ></path>
+                </svg>
+                <a
+                  href="mailto:hello@stackitgroup.com"
+                  class="hover:text-white transition-colors"
+                  >hello@stackitgroup.com</a
+                >
+              </p>
+              <p class="flex items-center">
+                <svg
+                  class="w-5 h-5 mr-3 text-gray-400"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
+                  ></path>
+                </svg>
+                <a href="tel:+16199175387" class="hover:cursor-default"
+                  >+1 (619) 917-5387</a
+                >
+              </p>
+              <p class="flex items-center">
+                <svg
+                  class="w-5 h-5 mr-3 text-gray-400"
+                  fill="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+                  ></path>
+                </svg>
+                <a
+                  href="https://www.linkedin.com/company/stackit/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="font-semibold hover:underline text-gray-400"
+                  >LinkedIn</a
+                >
+              </p>
+            </div>
+          </div>
+
+          <div class="md:col-span-7">
             <h2 class="text-2xl font-bold text-white mb-4">Stay in the loop</h2>
-            <div class="max-w-md">
+            <div class="max-w-lg">
               <form class="relative" id="newsletter-form">
                 <input
                   id="newsletter-email"
@@ -601,73 +669,10 @@
               </p>
             </div>
           </div>
-          <div class="md:col-span-3 flex flex-col items-start">
-            <div class="text-left w-full">
-              <h2 class="text-2xl font-bold text-white mb-6">Get In Touch</h2>
-              <div class="space-y-4 text-lg text-gray-300">
-                <p class="flex items-center">
-                  <svg
-                    class="w-5 h-5 mr-3 text-gray-400"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
-                    ></path>
-                  </svg>
-                  <a
-                    href="mailto:hello@stackitgroup.com"
-                    class="hover:text-white transition-colors"
-                    >hello@stackitgroup.com</a
-                  >
-                </p>
-                <p class="flex items-center">
-                  <svg
-                    class="w-5 h-5 mr-3 text-gray-400"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
-                    ></path>
-                  </svg>
-                  <a href="tel:+16199175387" class="hover:cursor-default"
-                    >+1 (619) 917-5387</a
-                  >
-                </p>
-                <p class="flex items-center">
-                  <svg
-                    class="w-5 h-5 mr-3 text-gray-400"
-                    fill="currentColor"
-                    viewBox="0 0 24 24"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
-                    ></path>
-                  </svg>
-                  <a
-                    href="https://www.linkedin.com/company/stackit/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="font-semibold text-white hover:underline"
-                    >LinkedIn</a
-                  >
-                </p>
-              </div>
-            </div>
+
+          <div class="md:col-span-7">
             <div
-              class="mt-12 flex flex-col w-auto text-4xl font-semibold text-white"
+              class="flex flex-col w-auto text-4xl font-semibold text-white text-center md:text-left mx-auto md:mx-0"
             >
               <span>Success.</span>
               <span>Coded.</span>
