fix: update closure copy

--- a/closure.html
+++ b/closure.html
@@ -92,14 +92,8 @@
             <h1
               class="text-4xl md:text-5xl font-bold text-black leading-tight mb-12 fade-in-section"
             >
-              The Partner You've Been Searching For...
+              Our In-House Drive
             </h1>
-            <p class="text-lg md:text-xl text-gray-800 fade-in-section">
-              The search for a capable dev partner shouldn't end in frustration
-              and chaos. We've designed a clear path for leaders who are ready
-              to stop micromanaging and start building the extraordinary
-              software their vision demands.
-            </p>
             <p class="text-lg fade-in-section">
               At Stackit, we know you’re the kind of leader committed to
               transforming a great idea into an extraordinary software product.
@@ -109,7 +103,7 @@
             <p class="text-lg fade-in-section">
               But there’s a problem: finding a capable dev partner is harder
               than it should be. Choosing the wrong one too often leads to
-              Development Chaos. Instead of leading, you’re left managing
+              development chaos. Instead of leading, you’re left managing
               misaligned teams, frustrated by a search that wastes time and
               drains energy. We believe businesses shouldn’t have to struggle
               when they want to build an exceptional product with external help.
@@ -202,7 +196,7 @@
               <div class="space-y-6">
                 <div>
                   <h4 class="text-xl font-bold text-gray-800" id="contact">
-                    1. Introduction Call
+                    Introduction Call
                   </h4>
                   <p class="text-lg text-gray-600 mt-2">
                     We hold a structured, two-way conversation to understand
