--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <a
               href="#contact"
               class="whitespace-nowrap bg-[#3F5FDD] text-white font-semibold px-12 py-4 text-lg sm:px-24 sm:py-6 sm:text-xl hover:bg-[#3550B8] transition-colors duration-300 inline-block w-full md:w-auto rounded-lg"
-              >Meet the Team</a
+              >Partner with Stackit</a
             >
           </div>
         </div>
@@ -513,7 +513,7 @@
 
       <section
         id="partner-section"
-        class="py-20 md:py-32"
+        class="py-20 md:pt-20 min-h-dvh flex items-center"
         style="
           background: linear-gradient(to bottom, #000000, #0a1a3e60, #000000);
         "
@@ -550,7 +550,9 @@
       </section>
     </main>
 
-    <footer class="bg-black text-gray-300 py-20 md:py-24">
+    <footer
+      class="flex items-center bg-black text-gray-300 py-20 md:py-24 border-t border-gray-800"
+    >
       <div class="container mx-auto px-6">
         <div class="grid grid-cols-1 md:grid-cols-10 gap-y-12 md:gap-x-16">
           <div class="md:col-span-7">
@@ -641,10 +643,16 @@
             </div>
           </div>
 
-          <div class="md:col-span-7">
+          <div class="md:col-span-10">
             <h2 class="text-2xl font-bold text-white mb-4">Stay in the loop</h2>
-            <div class="max-w-lg">
-              <form class="relative" id="newsletter-form">
+            <!-- <div class="max-w-lg"> -->
+            <div
+              class="grid grid-cols-1 gap-12 md:gap-0 md:grid-cols-10 md:gap-x-16"
+            >
+              <form
+                class="relative col-span-3 md:col-span-7"
+                id="newsletter-form"
+              >
                 <input
                   id="newsletter-email"
                   type="email"
@@ -661,22 +669,23 @@
                   <span>Subscribe</span>
                 </button>
               </form>
-              <p
-                id="newsletter-success"
-                class="text-gray-400 mt-2 text-sm hidden"
-              >
-                Welcome to Stackit!
-              </p>
+              <div class="col-span-3 md:col-span-3">
+                <div
+                  class="flex flex-col md:flex-row md:gap-2 w-auto text-4xl font-semibold text-white text-center md:text-left mx-auto md:mx-0"
+                >
+                  <span>Success.</span>
+                  <span>Coded.</span>
+                </div>
+              </div>
             </div>
-          </div>
 
-          <div class="md:col-span-7">
-            <div
-              class="flex flex-col w-auto text-4xl font-semibold text-white text-center md:text-left mx-auto md:mx-0"
+            <p
+              id="newsletter-success"
+              class="text-gray-400 mt-2 text-sm hidden"
             >
-              <span>Success.</span>
-              <span>Coded.</span>
-            </div>
+              Welcome to Stackit!
+            </p>
+            <!-- </div> -->
           </div>
         </div>
       </div>
