--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       >
         <a href="#" class="flex items-center">
           <img
-            src="stackit_logo_white.png"
+            src="stackit-logo-white-tone.png"
             alt="Stackit Logo"
             class="w-auto h-10 sm:h-10"
           />
