fix: partner heading fontsize update

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             <h2
               class="text-4xl sm:text-5xl md:text-6xl font-bold text-white mb-8"
             >
-              The Partner You've Been Searching For...
+              The partner you've been searching for...
             </h2>
             <p class="mb-12 text-2xl text-gray-300">
               The search for a capable dev partner shouldn't end in frustration
