fix: font weight change on closure page

--- a/closure.html
+++ b/closure.html
@@ -128,7 +128,7 @@
               predictable rhythm of progress.
             </p>
             <div>
-              <p class="text-lg text-black font-semibold">
+              <p class="text-lg text-black">
                 So, schedule an introduction call today. You can stop being
                 drained by constant team oversight and start building the
                 extraordinary software your vision demands.
