fix: closure page copy and styling updates

--- a/closure.html
+++ b/closure.html
@@ -86,27 +86,28 @@
     </a> -->
 
     <main>
-      <section class="pt-20 pb-20 md:pt-32 md:pb-32 bg-gray-50 relative">
+      <section class="pt-20 pb-20 md:pt-12 md:pb-32 bg-gray-50 relative">
         <div class="container mx-auto px-6">
           <div class="max-w-4xl mx-auto text-gray-700 space-y-8">
             <h1
-              class="text-4xl md:text-5xl font-bold text-black leading-tight mb-12 fade-in-section"
+              class="flex border-gray-500 border-b-2 pb-10 text-4xl md:text-5xl font-bold text-black leading-tight mb-12 fade-in-section"
             >
               Our In-House Drive
             </h1>
-            <p class="text-lg fade-in-section">
+            <p class="text-3xl font-light fade-in-section">
               At Stackit, we know you’re the kind of leader committed to
               transforming a great idea into an extraordinary software product.
               To do that, you need a highly professional, specialized team that
               acts as a true partner in bringing your vision to life.
             </p>
             <p class="text-lg fade-in-section">
-              But there’s a problem: finding a capable dev partner is harder
-              than it should be. Choosing the wrong one too often leads to
-              development chaos. Instead of leading, you’re left managing
-              misaligned teams, frustrated by a search that wastes time and
-              drains energy. We believe businesses shouldn’t have to struggle
-              when they want to build an exceptional product with external help.
+              <strong>But there’s a problem:</strong> finding a capable dev
+              partner is harder than it should be. Choosing the wrong one too
+              often leads to development chaos. Instead of leading, you’re left
+              managing misaligned teams, frustrated by a search that wastes time
+              and drains energy. We believe businesses shouldn’t have to
+              struggle when they want to build an exceptional product with
+              external help.
             </p>
             <p class="text-lg fade-in-section">
               We understand the frustration you feel when new growth
@@ -128,13 +129,13 @@
               predictable rhythm of progress.
             </p>
             <div>
-              <p class="text-lg text-black">
+              <p class="text-lg">
                 So, schedule an introduction call today. You can stop being
                 drained by constant team oversight and start building the
                 extraordinary software your vision demands.
               </p>
               <div
-                class="mt-8 flex flex-col sm:flex-row-reverse items-center justify-between gap-6"
+                class="mt-20 flex flex-col sm:flex-row-reverse items-center justify-between gap-6"
               >
                 <a
                   href="#contact"
