--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="SaaS development services, custom software development, long-term development partner, software for mid-sized companies, strategic software partner" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Stackit - Your External Dev Team with In-House Drive</title>
     <!-- Add this line for your favicon -->
