<title> https://app.clickup.com/t/86b6u3kjn

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="SaaS development services, custom software development, long-term development partner, software for mid-sized companies, strategic software partner" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Stackit - Your External Dev Team with In-House Drive</title>
+    <title>Stackit | Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
     <!-- Add this line for your favicon -->
     <link rel="icon" href="stackit-favicon.ico" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
