<meta name> changes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="SaaS development services, custom software development, long-term development partner, software for mid-sized companies, strategic software partner" />
+    <meta name="description" content="Build extraordinary software with Stackit, your external development team that shares your standards. We deliver high-quality software solutions with in-house dedication.-— Give us a call!" />
+    <meta name="keywords" content="external development team, software development, custom software, web development, mobile apps, digital solutions, tech consulting" />
+    <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Stackit | Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
+    <title>Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
     <!-- Add this line for your favicon -->
     <link rel="icon" href="stackit-favicon.ico" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,15 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <meta
-      name="description"
-      content="Build extraordinary software with Stackit, your external development team that shares your standards. We deliver high-quality software solutions with in-house dedication."
-    />
-    <meta
-      name="keywords"
-      content="external development team, software development, custom software, web development, mobile apps, digital solutions, tech consulting"
-    />
-    <link rel="canonical" href="https://stackit-uat.netlify.app/" />
+    <link rel="canonical" href="https://www.stackitgroup.com" />
     <style>
       body {
         font-family: 'Figtree', sans-serif;
