Image alt change

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="SaaS development services, custom software development, long-term development partner, software for mid-sized companies, strategic software partner" />
+    <meta name="keywords" content="SaaS development services, custom software development, long-term development partner, software for mid-sized companies, strategic software partner, external development team, software development, custom software, web development, digital solutions, tech consulting" />
     <meta name="description" content="Build extraordinary software with Stackit, your external development team that shares your standards. We deliver high-quality software solutions with in-house dedication.-— Give us a call!" />
-    <meta name="keywords" content="external development team, software development, custom software, web development, mobile apps, digital solutions, tech consulting" />
+    <meta name="theme-color" content="#3F5FDD">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
@@ -294,19 +294,19 @@
             >
               <img
                 src="siemens-logo.png"
-                alt="Siemens Logo"
+                alt="Client Logo: Siemens"
                 class="h-14 filter"
                 style="filter: invert(1)"
               />
               <img
                 src="i2sl-logo.png"
-                alt="I2SL Logo"
+                alt="Client Logo: I2SL"
                 class="h-14 filter"
                 style="filter: invert(1)"
               />
               <img
                 src="aircuity_logo.png"
-                alt="Aircuity Logo"
+                alt="Client Logo: Aircuity"
                 class="h-14 filter"
                 style="filter: invert(1)"
               />
