--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="https://www.stackitgroup.com/stackit-social-share-image.png" />
 
 
-    <title>Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
+    <title>Stackit | Helping high-growth leaders innovate at speed with the discipline & collaboration of an in-house team</title>
     <!-- Add this line for your favicon -->
     <link rel="icon" href="stackit-favicon.ico" type="image/png" />
     <script src="https://cdn.tailwindcss.com"></script>
